@@ -15,9 +15,10 @@ import uk.ac.ceh.gateway.catalogue.model.ResponsibleParty;
 import uk.ac.ceh.gateway.catalogue.model.Supplemental;
 import uk.ac.ceh.gateway.catalogue.serviceagreement.ServiceAgreement;
 
+import java.time.ZoneId;
+import java.time.LocalDate;
 import java.util.*;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.regex.Pattern.CASE_INSENSITIVE;
@@ -77,17 +78,56 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
     private Keyword resourceType;
     private AccessLimitation accessLimitation;
     private boolean notGEMINI;
-
+    private Boolean hasOnlineServiceAgreement;
 
     public void populateFromServiceAgreement(ServiceAgreement serviceAgreement) {
         this.setTitle(serviceAgreement.getTitle());
         this.setDescription(serviceAgreement.getDescription());
-        this.responsibleParties = serviceAgreement.getAuthors();
-        this.useConstraints = List.of(serviceAgreement.getEndUserLicence());
-        this.descriptiveKeywords = serviceAgreement.getDescriptiveKeywords();
+        this.useConstraints = Optional.ofNullable(serviceAgreement.getEndUserLicence())
+            .map(List::of)
+            .orElse(null);
         this.lineage = serviceAgreement.getLineage();
         this.boundingBoxes = serviceAgreement.getBoundingBoxes();
         this.funding = serviceAgreement.getFunding();
+        this.distributionFormats = Optional.ofNullable(serviceAgreement.getFiles())
+            .map(files -> files.stream()
+                .map(file -> DistributionInfo.builder()
+                    .name(file.getName())
+                    .type(file.getFormat())
+                    .build()
+                )
+                .toList()
+            )
+            .orElse(null);
+        val email = serviceAgreement.getDepositorContactDetails();
+        this.responsibleParties = new ArrayList<>();
+        this.responsibleParties.add(ResponsibleParty.builder()
+            .individualName(serviceAgreement.getDepositorName())
+            .email(email.endsWith("@ceh.ac.uk") ? "enquiries@ceh.ac.uk" : email)
+            .role("pointOfContact")
+            .build()
+        );
+        this.responsibleParties.addAll(
+            Optional.ofNullable(serviceAgreement.getAuthors())
+                .orElseGet(Collections::emptyList)
+        );
+        this.responsibleParties.addAll(
+            Optional.ofNullable(serviceAgreement.getOwnersOfIpr())
+                .orElseGet(Collections::emptyList)
+        );
+        Optional.ofNullable(serviceAgreement.getAvailability())
+            .ifPresent(availability -> {
+                this.datasetReferenceDate = DatasetReferenceDate.builder()
+                    .releasedDate(LocalDate.parse(availability))
+                    .build();
+        });
+        this.keywordsDiscipline = serviceAgreement.getKeywordsDiscipline();
+        this.keywordsInstrument = serviceAgreement.getKeywordsInstrument();
+        this.keywordsObservedProperty = serviceAgreement.getKeywordsObservedProperty();
+        this.keywordsPlace = serviceAgreement.getKeywordsPlace();
+        this.keywordsProject = serviceAgreement.getKeywordsProject();
+        this.keywordsTheme = serviceAgreement.getKeywordsTheme();
+        this.keywordsOther = serviceAgreement.getKeywordsOther();
     }
 
     @Override
@@ -104,6 +144,13 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
                 .orElse("Unknown");
     }
 
+    public Date getPublicationDate() {
+        return Optional.ofNullable(datasetReferenceDate)
+                .map(DatasetReferenceDate::getPublicationDate)
+                .map(date -> Date.from(date.atStartOfDay(ZoneId.of("UTC")).toInstant()))
+                .orElse(null);
+    }
+
     @Override
     public GeminiDocument setType(String type) {
         super.setType(type);
@@ -116,30 +163,30 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
     public List<Keyword> getAllKeywords() {
         return Stream.of(
             keywordsFromDescriptiveKeywords(),
-            Optional.ofNullable(keywordsDiscipline).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsInstrument).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsObservedProperty).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsPlace).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsProject).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsTheme).orElse(Collections.emptyList()),
-            Optional.ofNullable(keywordsOther).orElse(Collections.emptyList())
+            Optional.ofNullable(keywordsDiscipline).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsInstrument).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsObservedProperty).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsPlace).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsProject).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsTheme).orElseGet(Collections::emptyList),
+            Optional.ofNullable(keywordsOther).orElseGet(Collections::emptyList)
         )
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<Keyword> keywordsFromDescriptiveKeywords() {
         return Optional.ofNullable(descriptiveKeywords)
-            .orElse(Collections.emptyList())
+            .orElseGet(Collections::emptyList)
             .stream()
             .flatMap(dk -> dk.getKeywords().stream())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
     public GeminiDocument addAdditionalKeywords(List<Keyword> additionalKeywords) {
         descriptiveKeywords = Optional.ofNullable(descriptiveKeywords)
-                .orElse(new ArrayList<>());
+            .orElseGet(ArrayList::new);
 
         descriptiveKeywords.add(
                 DescriptiveKeywords
@@ -163,7 +210,7 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
 
     public List<OnlineResource> getOnlineResources() {
         return Optional.ofNullable(onlineResources)
-            .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     @JsonIgnore
@@ -172,7 +219,7 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
         return getOnlineResources()
             .stream()
             .filter(onlineResource -> downloadRoles.contains(onlineResource.getFunction()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -183,22 +230,14 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
      */
     @JsonIgnore
     public String getMapViewerUrl() {
-        val possibleWms = Optional.ofNullable(onlineResources)
-                .orElse(Collections.emptyList())
-                .stream()
-                .filter(onlineResource -> onlineResource.getType().equals(WMS_GET_CAPABILITIES))
-                .filter(onlineResource -> WMS_ONLINE_RESOURCE.matcher(onlineResource.getUrl()).matches())
-                .findFirst();
-
-        if (possibleWms.isPresent()) {
-            val onlineResource = possibleWms.get();
-            log.debug(onlineResource.toString());
-            val matcher = WMS_ONLINE_RESOURCE.matcher(onlineResource.getUrl());
-            log.debug("matches {}, group 1: {}", matcher.matches(), matcher.group(1));
-            val id = matcher.group(1);
-            return "/maps#layers/" + id;
-        }
-        return null;
+        return Optional.ofNullable(onlineResources)
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .filter(onlineResource -> onlineResource.getType().equals(WMS_GET_CAPABILITIES))
+            .flatMap(onlineResource -> WMS_ONLINE_RESOURCE.matcher(onlineResource.getUrl()).results())
+            .findFirst()
+            .map(matchResult -> "/maps#layers/" + matchResult.group(1))
+            .orElse(null);
     }
 
     @JsonIgnore
@@ -208,33 +247,31 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
 
     public List<String> getTopics() {
         return Optional.ofNullable(keywordsTheme)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(Keyword::getUri)
-                .filter(uri -> uri.startsWith(TOPIC_PROJECT_URL))
-                .collect(Collectors.toList());
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .map(Keyword::getUri)
+            .filter(uri -> uri.startsWith(TOPIC_PROJECT_URL))
+            .toList();
     }
 
     public List<String> getCoupledResources() {
-        return Optional.ofNullable(service)
-                .map(Service::getCoupledResources)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(Service.CoupledResource::getIdentifier)
-                .filter(cr -> !cr.isEmpty())
-                .collect(Collectors.toList());
+        return Stream.ofNullable(service)
+            .flatMap(s -> s.getCoupledResources().stream())
+            .map(Service.CoupledResource::getIdentifier)
+            .filter(cr -> !cr.isEmpty())
+            .toList();
     }
 
     public List<ResponsibleParty> getResponsibleParties() {
         return Optional.ofNullable(responsibleParties)
-                .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
-    private List<ResponsibleParty>responsiblePartyByRole(String role) {
+    private List<ResponsibleParty> responsiblePartyByRole(String role) {
         return getResponsibleParties()
             .stream()
-            .filter((responsibleParty) -> responsibleParty.getRole().equalsIgnoreCase(role))
-            .collect(Collectors.toList());
+            .filter(responsibleParty -> responsibleParty.getRole().equalsIgnoreCase(role))
+            .toList();
     }
 
     public List<ResponsibleParty> getAuthors() {
@@ -259,45 +296,45 @@ public class GeminiDocument extends AbstractMetadataDocument implements WellKnow
 
     public List<DistributionInfo> getDistributionFormats() {
         return Optional.ofNullable(distributionFormats)
-            .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     public List<BoundingBox> getBoundingBoxes() {
         return Optional.ofNullable(boundingBoxes)
-            .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     public List<Funding> getFunding() {
         return Optional.ofNullable(funding)
-                .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     public List<Supplemental> getSupplemental() {
         return Optional.ofNullable(supplemental)
-                .orElse(Collections.emptyList());
+            .orElseGet(Collections::emptyList);
     }
 
     @Override
     public @NonNull List<String> getWKTs() {
         return Optional.ofNullable(boundingBoxes)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(BoundingBox::getWkt)
-                .collect(Collectors.toList());
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .map(BoundingBox::getWkt)
+            .toList();
     }
 
     @JsonIgnore
     public @NonNull List<String> getBounds() {
         return Optional.ofNullable(boundingBoxes)
-                .orElse(Collections.emptyList())
-                .stream()
-                .map(BoundingBox::getBounds)
-                .collect(Collectors.toList());
+            .orElseGet(Collections::emptyList)
+            .stream()
+            .map(BoundingBox::getBounds)
+            .toList();
     }
     public long getIncomingCitationCount() {
         return Optional.ofNullable(incomingCitations)
-            .orElse(Collections.emptyList())
-            .size();
+            .map(List::size)
+            .orElse(0);
     }
 
 }
